render new word doc

--- a/museum_matching/museum_tutorial.Rmd
+++ b/museum_matching/museum_tutorial.Rmd
@@ -1,5 +1,5 @@
 ---
-title:  "Matching survey data with catalogue specimens"
+title:  "Matching survey data with catalogued specimens"
 output:
   word_document: default
   pdf_document: default
